--- a/workbook/1.md
+++ b/workbook/1.md
@@ -1,1 +1,13 @@
+# 자료구조
 
+|분류|알고리즘|문제
+|------|---|---|
+|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
+|2|테스트2|---|
+|3|테스트2|---|
+|4|테스트2|---|
+|5|테스트2|---|
+|6|테스트2|---|
+|7|테스트2|---|
+|8|테스트2|---|
+|9|테스트2|---|
