--- a/workbook/1.md
+++ b/workbook/1.md
@@ -1,13 +1,14 @@
 # 자료구조
 
-|분류|알고리즘|문제
-|------|---|---|
-|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|테스트2|---|
-|3|테스트2|---|
-|4|테스트2|---|
-|5|테스트2|---|
-|6|테스트2|---|
-|7|테스트2|---|
-|8|테스트2|---|
-|9|테스트2|---|
+|번호|분류|알고리즘|문제
+|---|------|---|---|
+|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
+|2|분류|테스트2|---|
+|3|분류|테스트2|---|
+|4|분류|테스트2|---|
+|5|분류|테스트2|---|
+|6|분류|테스트2|---|
+|7|분류|테스트2|---|
+|8|분류|테스트2|---|
+|9|분류|테스트2|---|
+|10|분류|테스트2|---|
