--- a/workbook/자료구조.md
+++ b/workbook/자료구조.md
@@ -1,15 +1,14 @@
 # 자료구조
 
-|번호|분류|알고리즘|문제
+|번호|분류|알고리즘|문제|
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
+|1|BOJ|스택|[6198 옥상 정원 꾸미기](https://www.acmicpc.net/problem/6198)|
+|2|BOJ|덱|[5430 AC](https://www.acmicpc.net/problem/5430)|
+|3|BOJ|덱/슬라이딩 윈도우|[11003 최솟값 찾기](https://www.acmicpc.net/problem/11003)|
+|4|BOJ|우선순위 큐|[11286 절댓값 힙](https://www.acmicpc.net/problem/11286)|
+|5|BOJ|우선순위 큐|[21939 문제 추천 시스템 Version1](https://www.acmicpc.net/problem/21939)|
 |6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
 |7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
 |8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
 |9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
 |10|PROGRAMMERS|힙|[더 맵게](https://school.programmers.co.kr/learn/courses/30/lessons/42626)|
-
