--- a/workbook/그리디.md
+++ b/workbook/그리디.md
@@ -9,7 +9,6 @@
 |5|분류|테스트2|---|
 |6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
 |7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
-|8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
-|9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
-|10|PROGRAMMERS|힙|[더 맵게](https://school.programmers.co.kr/learn/courses/30/lessons/42626)|
-
+|8|PROGRAMMERS|그리디|[큰 수 만들기](https://school.programmers.co.kr/learn/courses/30/lessons/42883)|
+|9|PROGRAMMERS|그리디|[구명보트](https://school.programmers.co.kr/learn/courses/30/lessons/42885)|
+|10|PROGRAMMERS|그리디|[체육복](https://school.programmers.co.kr/learn/courses/30/lessons/42862)|
