--- a/workbook/그리디.md
+++ b/workbook/그리디.md
@@ -2,13 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
-|6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
-|7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
+|1|BOJ|그리디|[1931 회의실 배정](https://www.acmicpc.net/problem/1931)|
+|2|BOJ|그리디|[21314 민겸 수](https://www.acmicpc.net/problem/21314)|
+|3|BOJ|그리디|[11000 강의실 배정](https://www.acmicpc.net/problem/11000)|
+|4|BOJ|그리디|[2457 공주님의 정원](https://www.acmicpc.net/problem/2457)|
+|5|BOJ|그리디|[11501 주식](https://www.acmicpc.net/problem/11501)|
+|6|BOJ|그리디|[19598 최소 회의실 개수](https://www.acmicpc.net/problem/19598)|
+|7|BOJ|그리디|[8980 택배](https://www.acmicpc.net/problem/8980)|
 |8|PROGRAMMERS|그리디|[큰 수 만들기](https://school.programmers.co.kr/learn/courses/30/lessons/42883)|
 |9|PROGRAMMERS|그리디|[구명보트](https://school.programmers.co.kr/learn/courses/30/lessons/42885)|
 |10|PROGRAMMERS|그리디|[체육복](https://school.programmers.co.kr/learn/courses/30/lessons/42862)|
