--- a/workbook/시뮬레이션&구현.md
+++ b/workbook/시뮬레이션&구현.md
@@ -7,9 +7,9 @@
 |3|분류|테스트2|---|
 |4|분류|테스트2|---|
 |5|분류|테스트2|---|
-|6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
-|7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
-|8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
-|9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
-|10|PROGRAMMERS|힙|[더 맵게](https://school.programmers.co.kr/learn/courses/30/lessons/42626)|
+|6|PROGRAMMERS|시뮬레이션&구현|[게임 맵 최단거리](https://school.programmers.co.kr/learn/courses/30/lessons/1844)|
+|7|PROGRAMMERS|시뮬레이션&구현|[네트워크](https://school.programmers.co.kr/learn/courses/30/lessons/43162)|
+|8|PROGRAMMERS|시뮬레이션&구현|[키패드 누르기](https://school.programmers.co.kr/learn/courses/30/lessons/67256)|
+|9|PROGRAMMERS|시뮬레이션&구현|[스킬트리](https://school.programmers.co.kr/learn/courses/30/lessons/49993)|
+|10|PROGRAMMERS|시뮬레이션&구현|[타겟 넘버](https://school.programmers.co.kr/learn/courses/30/lessons/43165)|
 
