Update and rename 그래프탐색,md to 그래프탐색.md

--- a/workbook/그래프탐색.md
+++ b/workbook/그래프탐색.md
@@ -11,5 +11,5 @@
 |7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
 |8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
 |9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
-|10|PROGRAMMERS|힙|[더 맵게](https://school.programmers.co.kr/learn/courses/30/lessons/42626)|
+|10|PROGRAMMERS|그래프탐색(DFS/BFS)|[여행경로](https://school.programmers.co.kr/learn/courses/30/lessons/43164)|
 
