--- a/workbook/시뮬레이션&구현.md
+++ b/workbook/시뮬레이션&구현.md
@@ -2,14 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
+|1|BOJ|시뮬레이션&구현|[21608 상어 초등학교](https://www.acmicpc.net/problem/21608)|
+|2|BOJ|시뮬레이션&구현|[20164 홀수 홀릭 호석](https://www.acmicpc.net/problem/20164)|
+|3|BOJ|시뮬레이션&구현|[16719 ZOAC](https://www.acmicpc.net/problem/16719)|
+|4|BOJ|시뮬레이션&구현|[11559 Puyo Puyo](https://www.acmicpc.net/problem/11559)|
+|5|BOJ|시뮬레이션&구현|[15683 감시](https://www.acmicpc.net/problem/15683)|
 |6|PROGRAMMERS|시뮬레이션&구현|[게임 맵 최단거리](https://school.programmers.co.kr/learn/courses/30/lessons/1844)|
 |7|PROGRAMMERS|시뮬레이션&구현|[네트워크](https://school.programmers.co.kr/learn/courses/30/lessons/43162)|
 |8|PROGRAMMERS|시뮬레이션&구현|[키패드 누르기](https://school.programmers.co.kr/learn/courses/30/lessons/67256)|
 |9|PROGRAMMERS|시뮬레이션&구현|[스킬트리](https://school.programmers.co.kr/learn/courses/30/lessons/49993)|
 |10|PROGRAMMERS|시뮬레이션&구현|[타겟 넘버](https://school.programmers.co.kr/learn/courses/30/lessons/43165)|
-
