--- a/workbook/완전탐색.md
+++ b/workbook/완전탐색.md
@@ -7,9 +7,9 @@
 |3|분류|테스트2|---|
 |4|분류|테스트2|---|
 |5|분류|테스트2|---|
-|6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
-|7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
-|8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
-|9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
-|10|PROGRAMMERS|힙|[더 맵게](https://school.programmers.co.kr/learn/courses/30/lessons/42626)|
+|6|PROGRAMMERS|완전탐색|[최소직사각형](https://school.programmers.co.kr/learn/courses/30/lessons/86491)|
+|7|PROGRAMMERS|완전탐색|[소수찾기](https://school.programmers.co.kr/learn/courses/30/lessons/42839)|
+|8|PROGRAMMERS|완전탐색|[카펫](https://school.programmers.co.kr/learn/courses/30/lessons/42842)|
+|9|PROGRAMMERS|완전탐색|[피로도](https://school.programmers.co.kr/learn/courses/30/lessons/87946)|
+|10|PROGRAMMERS|완전탐색|[모음사전](https://school.programmers.co.kr/learn/courses/30/lessons/84512)|
 
