--- a/workbook/그래프탐색.md
+++ b/workbook/그래프탐색.md
@@ -2,14 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
-|6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
-|7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
-|8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
-|9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
+|1|BOJ|그래프탐색(DFS/BFS)|[1325 효율적인 해킹](https://www.acmicpc.net/problem/1325)|
+|2|BOJ|그래프탐색(DFS/BFS)|[16918 봄버맨](https://www.acmicpc.net/problem/16918)|
+|3|BOJ|그래프탐색(DFS/BFS)|[16234 인구 이동](https://www.acmicpc.net/problem/16234)|
+|4|BOJ|그래프탐색(DFS/BFS)|[17836 공주님을 구해라!](https://www.acmicpc.net/problem/17836)|
+|5|BOJ|그래프탐색(DFS/BFS)|[5547 일루미네이션](https://www.acmicpc.net/problem/5547)|
+|6|BOJ|그래프탐색(DFS/BFS)|[2206 벽 부수고 이동하기](https://www.acmicpc.net/problem/2206)|
+|7|BOJ|그래프탐색(DFS/BFS)|[2636 치즈](https://www.acmicpc.net/problem/2636)|
+|8|BOJ|그래프탐색(DFS/BFS)|[1600 말이 되고픈 원숭이](https://www.acmicpc.net/problem/1600)|
+|9|BOJ|그래프탐색(DFS/BFS)|[2573 빙산](https://www.acmicpc.net/problem/2573)|
 |10|PROGRAMMERS|그래프탐색(DFS/BFS)|[여행경로](https://school.programmers.co.kr/learn/courses/30/lessons/43164)|
-
