--- a/workbook/완전탐색.md
+++ b/workbook/완전탐색.md
@@ -2,14 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
+|1|BOJ|완전탐색|[16508 전공책](https://www.acmicpc.net/problem/16508)|
+|2|BOJ|완전탐색|[14620 꽃길](https://www.acmicpc.net/problem/14620)|
+|3|BOJ|완전탐색|[2615 오목](https://www.acmicpc.net/problem/2615)|
+|4|BOJ|완전탐색|[1548 부분 삼각 수열](https://www.acmicpc.net/problem/1548)|
+|5|BOJ|완전탐색|[14500 테트로미노](https://www.acmicpc.net/problem/14500)|
 |6|PROGRAMMERS|완전탐색|[최소직사각형](https://school.programmers.co.kr/learn/courses/30/lessons/86491)|
 |7|PROGRAMMERS|완전탐색|[소수찾기](https://school.programmers.co.kr/learn/courses/30/lessons/42839)|
 |8|PROGRAMMERS|완전탐색|[카펫](https://school.programmers.co.kr/learn/courses/30/lessons/42842)|
 |9|PROGRAMMERS|완전탐색|[피로도](https://school.programmers.co.kr/learn/courses/30/lessons/87946)|
 |10|PROGRAMMERS|완전탐색|[모음사전](https://school.programmers.co.kr/learn/courses/30/lessons/84512)|
-
