--- a/workbook/최단경로.md
+++ b/workbook/최단경로.md
@@ -8,8 +8,8 @@
 |4|분류|테스트2|---|
 |5|분류|테스트2|---|
 |6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
-|7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
-|8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
-|9|PROGRAMMERS|해시|[전화번호 목록](https://school.programmers.co.kr/learn/courses/30/lessons/42577)|
-|10|PROGRAMMERS|힙|[더 맵게](https://school.programmers.co.kr/learn/courses/30/lessons/42626)|
+|7|PROGRAMMERS|최단경로|[순위](https://school.programmers.co.kr/learn/courses/30/lessons/49191)|
+|8|PROGRAMMERS|최단경로|[섬 연결하기](https://school.programmers.co.kr/learn/courses/30/lessons/42861)|
+|9|PROGRAMMERS|최단경로|[합승 택시 요금](https://school.programmers.co.kr/learn/courses/30/lessons/72413)|
+|10|PROGRAMMERS|최단경로|[배달](https://school.programmers.co.kr/learn/courses/30/lessons/12978)|
 
