--- a/workbook/이분탐색&투포인터.md
+++ b/workbook/이분탐색&투포인터.md
@@ -2,14 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
-|6|PROGRAMMERS||[]()|
-|7|PROGRAMMERS|스택/큐|[다리를 지나는 트럭](https://school.programmers.co.kr/learn/courses/30/lessons/42583)|
-|8|PROGRAMMERS|스택/큐|[프로세스](https://school.programmers.co.kr/learn/courses/30/lessons/42587)|
-|9|PROGRAMMERS|이분탐색&투포인터|[순위검색](https://school.programmers.co.kr/learn/courses/30/lessons/72412)|
+|1|BOJ|투포인터|[21921 블로그](https://www.acmicpc.net/problem/21921)|
+|2|BOJ|투포인터|[20922 겹치는 건 싫어](https://www.acmicpc.net/problem/20922)|
+|3|BOJ|투포인터|[2531 회전 초밥](https://www.acmicpc.net/problem/2531)|
+|4|BOJ|투포인터|[1644 소수의 연속합](https://www.acmicpc.net/problem/1644)|
+|5|BOJ|이분탐색|[11663 선분 위의 점](https://www.acmicpc.net/problem/11663)|
+|6|BOJ|이분탐색|[22871 징검다리 건너기 (large)](https://www.acmicpc.net/problem/22871)|
+|7|BOJ|이분탐색|[2805 나무 자르기](https://www.acmicpc.net/problem/2805)|
+|8|BOJ|이분탐색|[2110 공유기 설치](https://www.acmicpc.net/problem/2110)|
+|9|BOJ|이분탐색|[2473 세 용액](https://www.acmicpc.net/problem/2473)|
 |10|PROGRAMMERS|이분탐색&투포인터|[입국심사](https://school.programmers.co.kr/learn/courses/30/lessons/43238)|
-
