--- a/workbook/최단경로.md
+++ b/workbook/최단경로.md
@@ -2,14 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
-|6|PROGRAMMERS|스택/큐|[주식가격](https://school.programmers.co.kr/learn/courses/30/lessons/42584)|
+|1|BOJ|플로이드|[11404 플로이드](https://www.acmicpc.net/problem/11404)|
+|2|BOJ|플로이드|[14938 서강 그라운드](https://www.acmicpc.net/problem/14938)|
+|3|BOJ|플로이드|[1719 택배](https://www.acmicpc.net/problem/1719)|
+|4|BOJ|다익스트라|[11779 최소비용 구하기 2](https://www.acmicpc.net/problem/11779)|
+|5|BOJ|다익스트라|[1238 파티](https://www.acmicpc.net/problem/1238)|
+|6|BOJ|다익스트라|[1261 알고스팟](https://www.acmicpc.net/problem/1261)|
 |7|PROGRAMMERS|최단경로|[순위](https://school.programmers.co.kr/learn/courses/30/lessons/49191)|
 |8|PROGRAMMERS|최단경로|[섬 연결하기](https://school.programmers.co.kr/learn/courses/30/lessons/42861)|
 |9|PROGRAMMERS|최단경로|[합승 택시 요금](https://school.programmers.co.kr/learn/courses/30/lessons/72413)|
 |10|PROGRAMMERS|최단경로|[배달](https://school.programmers.co.kr/learn/courses/30/lessons/12978)|
-
