--- a/workbook/정렬.md
+++ b/workbook/정렬.md
@@ -2,14 +2,13 @@
 
 |번호|분류|알고리즘|문제
 |---|------|---|---|
-|1|BOJ|스택|[17298 오큰수](http://www.google.co.kr)|
-|2|분류|테스트2|---|
-|3|분류|테스트2|---|
-|4|분류|테스트2|---|
-|5|분류|테스트2|---|
+|1|BOJ|정렬|[1431 시리얼 번호](https://www.acmicpc.net/problem/1431)|
+|2|BOJ|정렬|[2910 빈도 정렬](https://www.acmicpc.net/problem/2910)|
+|3|BOJ|정렬|[7795 먹을 것인가 먹힐 것인가](https://www.acmicpc.net/problem/7795)|
+|4|BOJ|위상정렬|[2252 줄 세우기](https://www.acmicpc.net/problem/2252)|
+|5|BOJ|위상정렬|[2623 음악프로그램](https://www.acmicpc.net/problem/2623)|
 |6|PROGRAMMERS|정렬|[문자열 내 마음대로 정렬하기](https://school.programmers.co.kr/learn/courses/30/lessons/12915)|
 |7|PROGRAMMERS|정렬|[메뉴 리뉴얼](https://school.programmers.co.kr/learn/courses/30/lessons/12915)|
 |8|PROGRAMMERS|정렬|[K번째수](https://school.programmers.co.kr/learn/courses/30/lessons/42748)|
 |9|PROGRAMMERS|정렬|[가장 큰 수](https://school.programmers.co.kr/learn/courses/30/lessons/42746)|
 |10|PROGRAMMERS|정렬|[H-Index](https://school.programmers.co.kr/learn/courses/30/lessons/42747)|
-
